# git-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  coding_policy_git.py  install  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yaml
.github/workflows/: ci.yaml  cla.yaml
git_hooks/: copyright.py  end_of_file.py  indent_with_spaces.py  indent_with_tabs.py  jira_issue.py  license.py  llsd.py  no_trigraphs.py  opensource_license.py  util.py
hooks/: commit-msg  pre-commit
tests/: copyright_test.py  end_of_file_test.py  indent_with_spaces_test.py  indent_with_tabs_test.py  jira_issue_test.py  license_test.py  llsd_test.py  no_trigraphs_test.py  opensource_license_test.py  support.py
