[metadata]
name = linden_git_hooks 
version = 1.0.0 
description = Linden coding policy checks 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/lindenlab/git-hooks
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    llbase

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    check-linden-copyright = git_hooks.copyright:main
    check-linden-indent-with-spaces = git_hooks.indent_with_spaces:main
    check-linden-indent-with-tabs = git_hooks.indent_with_tabs:main
    check-linden-jira-issue = git_hooks.jira_issue:main
    check-linden-license = git_hooks.license:main
    check-linden-no-trigraphs = git_hooks.no_trigraphs:main
    check-linden-opensource-license = git_hooks.opensource_license:main
    check-llsd = git_hooks.llsd:main

[bdist_wheel]
universal = True

[options.extras_require]
test = pytest; covdefaults; coverage
dev = tox; pytest; covdefaults; coverage

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 132
